# Chip8topia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-wasm.sh  imgui.ini  vcpkg.json
.github/: release.yaml
Chip8Games/: readme.txt
Chip8topia/: CMakeLists.txt  Chip8topia.cpp  Chip8topia.h  Chip8topiaDebugger.cpp  Chip8topiaDebugger.h  Chip8topiaUi.cpp  Chip8topiaUi.h  app.rc  main.cpp
Chip8topia/Chip8Core/: Chip8Core.cpp  Chip8Core.h  Cpu.cpp  Cpu.h  Ppu.h
Chip8topia/Chip8Core/Core/: Cpu.h  Ram.h
Chip8topia/Chip8Emulator/: Chip8Emulator.cpp  Chip8Emulator.h
Chip8topia/Chip8Emulator/Chip8Core/: Chip8Core.cpp  Chip8Core.h  Chip8CoreBase.cpp  Chip8CoreBase.h
Chip8topia/Chip8Emulator/Chip8Core/Core/: Chip8Cpu.h  Chip8Ppu.cpp  Chip8Ppu.h  Cpu.cpp  Cpu.h  CpuDisassembly.cpp  Input.cpp  Input.h  Ppu.cpp  Ppu.h  Ram.cpp  Ram.h
Chip8topia/Chip8Emulator/Chip8CoreBase/: Chip8CoreBase.cpp  Chip8CoreBase.h  chip8Fonts.h
Chip8topia/Chip8Emulator/Chip8CoreBase/Core/: CpuBase.cpp  CpuBase.h  Input.cpp  Input.h  PpuBase.cpp  PpuBase.h
Chip8topia/Chip8Emulator/Chip8Emulation/: Chip8RomLoader.cpp  Chip8RomLoader.h  Chip8SoundEmulation.cpp  Chip8SoundEmulation.h  Chip8VideoEmulation.cpp  Chip8VideoEmulation.h
Chip8topia/Chip8Emulator/Chip8Emulator/: Chip8RomLoader.cpp  Chip8RomLoader.h  Chip8SoundEmulation.cpp  Chip8SoundEmulation.h  Chip8VideoEmulation.cpp  Chip8VideoEmulation.h
Chip8topia/Chip8Emulator/Chip8Emulator/Chip8VideoEmulation/: ShaderBW.cpp  ShaderBW.h  ShaderXoChip.cpp  ShaderXoChip.h
Chip8topia/Chip8Emulator/ChipCores/Chip8Core/: Chip8Core.cpp  Chip8Core.h
Chip8topia/Chip8Emulator/ChipCores/Chip8Core/Core/: Chip8Cpu.cpp  Chip8Cpu.h  Chip8Ppu.cpp  Chip8Ppu.h
Chip8topia/Chip8Emulator/ChipCores/SChip11Core/: SChip11Core.cpp  SChip11Core.h
Chip8topia/Chip8Emulator/ChipCores/SChip11Core/Core/: SChip11Cpu.cpp  SChip11Cpu.h  SChip11Ppu.cpp  SChip11Ppu.h  Schip11Cpu.cpp  Schip11Cpu.h  Schip11Ppu.cpp  Schip11Ppu.h  Schip11ppu.cpp  Schip11ppu.h
Chip8topia/Chip8Emulator/ChipCores/SchipCCore/: SChipCCore.cpp  SChipCCore.h
Chip8topia/Chip8Emulator/ChipCores/SchipCCore/Core/: SChipCCpu.cpp  SChipCCpu.h  SChipCPpu.cpp  SChipCPpu.h
Chip8topia/Chip8Emulator/ChipCores/Schipc8Core/: SChipCCore.cpp  SChipCCore.h
Chip8topia/Chip8Emulator/ChipCores/Schipc8Core/Core/: SChipCCpu.cpp  SChipCPpu.cpp
Chip8topia/Chip8Emulator/ChipCores/XoChipCore/: XoChipCore.cpp  XoChipCore.h
Chip8topia/Chip8Emulator/ChipCores/XoChipCore/Core/: XoChipCpu.cpp  XoChipCpu.h  XoChipPpu.cpp  XoChipPpu.h
Chip8topia/Chip8Emulator/Disassembly/: Chip8CpuDisassembly.cpp  Chip8CpuDisassembly.h  CpuDisassembly.cpp  CpuDisassembly.h  SChip11CpuDisassembly.cpp  SChip11CpuDisassembly.h  SChipCCpuDisassembly.cpp  SChipCCpuDisassembly.h  XoChipCpuDisassembly.cpp  XoChipCpuDisassembly.h  disassemblySettings.h
Chip8topia/Chip8topiaInputHandler/: Chip8TopiaInputHandler.cpp  Chip8TopiaInputHandler.h  Chip8topiaInputHandler.cpp  Chip8topiaInputHandler.h
Chip8topia/Chip8topiaInputHandler/EventDefinitions/: EventDefinitions.h
Chip8topia/Chip8topiaInputHandler/EventSystem/: EventSystem.h
Chip8topia/Chip8topiaInputHandler/SubscriberEventSystem/: MultiSubscriberEvent.h  SingleSubscriberEvent.h  SubscriberEventBase.h
Chip8topia/Chip8topiaInputHandler/SubscriberEventSystem/CallbackEventDefinitions/: CallbackEventDefinitions.h
Chip8topia/Chip8topiaInputHandler/SubscriberEventSystem/MultiSubscriberEvent/: MultiSubscriberEvent.h
Chip8topia/Chip8topiaInputHandler/SubscriberEventSystem/SingleSubscriberEvent/: SingleSubscriberEvent.h
Chip8topia/Chip8topiaUi/: Chip8topiaDebugger.cpp  Chip8topiaDebugger.h  Chip8topiaUi.cpp  Chip8topiaUi.h
Chip8topia/Chip8topiaUi/Chip8About/: Chip8About.cpp  Chip8About.h
Chip8topia/Chip8topiaUi/Chip8EmulationUi/: Chip8EmulationUi.cpp  Chip8EmulationUi.h
Chip8topia/Chip8topiaUi/Chip8Error/: Chip8Error.cpp  Chip8Error.h  Chip8MessageHandler.cpp  Chip8MessageHandler.h
Chip8topia/Chip8topiaUi/Chip8MessageHandler/: Chip8MessageHandler.cpp
Chip8topia/Chip8topiaUi/Chip8RomLoaderUi/: Chip8RomLoaderUi.cpp  Chip8RomLoaderUi.h
Chip8topia/Chip8topiaUi/Chip8Toast/: Chip8Toast.cpp  Chip8Toast.h
Chip8topia/Chip8topiaUi/Chip8VideoUi/: Chip8VideoUi.cpp  Chip8VideoUi.h
Chip8topia/Chip8topiaUi/Chip8topiaAbout/: Chip8topiaAbout.cpp  Chip8topiaAbout.h
Chip8topia/Chip8topiaUi/Chip8topiaDebugger/: Chip8Disassembler.cpp  Chip8Disassembler.h  Chip8topiaDebugger.cpp  Chip8topiaDebugger.h  Chip8topiaDisassembler.cpp  Chip8topiaDisassembler.h
Chip8topia/Chip8topiaUi/Chip8topiaEmulationUi/: Chip8topiaEmulationUi.cpp  Chip8topiaEmulationUi.h  Chip8topiaPerformanceMonitor.cpp  Chip8topiaPerformanceMonitor.h
Chip8topia/Chip8topiaUi/Chip8topiaMessageHandler/: Chip8topiaMessageHandler.cpp  Chip8topiaMessageHandler.h
Chip8topia/Chip8topiaUi/Chip8topiaPerformanceMonitor/: Chip8topiaPerformanceMonitor.cpp  Chip8topiaPerformanceMonitor.h
Chip8topia/Chip8topiaUi/Chip8topiaRomLoaderUi/: Chip8topiaRomLoaderUi.cpp  Chip8topiaRomLoaderUi.h
Chip8topia/Chip8topiaUi/Chip8topiaSoundUi/: Chip8topiaSoundUi.cpp  Chip8topiaSoundUi.h
Chip8topia/Chip8topiaUi/Chip8topiaVideoUi/: Chip8topiaVideoUi.cpp  Chip8topiaVideoUi.h
Chip8topia/Chip8topiaUi/ImGuiHelper/: ImGuiHelper.h
Chip8topia/Shader/: Shader.cpp  Shader.h
Chip8topia/res/: chip8topiaIconResource.h
Chip8topia/utils/PerformanceMonitor/: PerformanceMonitor.cpp  PerformanceMonitor.h
Chip8topia/utils/RandomGenerator/: RandomGenerator.h
Chip8topia/utils/Singleton/: Singleton.h  Singleton.hpp
Chip8topia/utils/binaryLib/: binaryLib.h
Chip8topia/utils/consoleLogger/: consoleLogger.h
Chip8topia/utils/mathLerp/: mathLerp.cpp  mathLerp.h
Chip8topia/utils/plateformIdentifier/: plateformIdentifier.h
dependencies/: CMakeLists.txt
dependencies/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
dependencies/binaryLib/: binaryLib.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui_emscripten/: imgui_emscripten.h
shaders/: Chip8topia.frag  (+6 more)
(+15 files in other folders)
